--- a/Table/Table/Base.lproj/Main.storyboard
+++ b/Table/Table/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Main View-->
         <scene sceneID="va9-td-zrG">
             <objects>
-                <tableViewController id="kA5-ct-4Yr" customClass="TableViewController" sceneMemberID="viewController">
+                <tableViewController id="kA5-ct-4Yr" customClass="TableViewController" customModule="Table" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="8eo-zh-EIj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
