--- a/Audio/Audio/Base.lproj/Main.storyboard
+++ b/Audio/Audio/Base.lproj/Main.storyboard
@@ -18,56 +18,56 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="qWP-GX-Cfr">
-                                <rect key="frame" x="57" y="84" width="300" height="313.5"/>
+                                <rect key="frame" x="31" y="84" width="352" height="451.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio Player" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M81-xa-bbz">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="29"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="352" height="30.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30.5" id="JHP-aO-39L"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gBO-rf-MY2">
-                                        <rect key="frame" x="0.0" y="79" width="300" height="4"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="300" id="3I6-MT-0Ot"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="80.5" width="352" height="4"/>
                                     </progressView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1aj-rz-pzK">
-                                        <rect key="frame" x="0.0" y="133" width="300" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="134.5" width="352" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="currentTime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eDW-cE-Efw">
-                                                <rect key="frame" x="0.0" y="0.0" width="146" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="172" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="endTime" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klu-wf-jMr">
-                                                <rect key="frame" x="154" y="0.0" width="146" height="20.5"/>
+                                                <rect key="frame" x="180" y="0.0" width="172" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="97" translatesAutoresizingMaskIntoConstraints="NO" id="GCE-UV-d1i">
-                                        <rect key="frame" x="0.0" y="203.5" width="300" height="30"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="95" translatesAutoresizingMaskIntoConstraints="NO" id="GCE-UV-d1i">
+                                        <rect key="frame" x="0.0" y="205" width="352" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CLx-KP-9gf">
-                                                <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="54" height="30"/>
                                                 <state key="normal" title="Play"/>
                                                 <connections>
                                                     <action selector="PlayAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fKq-7G-VZW"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xBA-79-TwI">
-                                                <rect key="frame" x="128.5" y="0.0" width="42" height="30"/>
+                                                <rect key="frame" x="149" y="0.0" width="54" height="30"/>
                                                 <state key="normal" title="Pause"/>
                                                 <connections>
                                                     <action selector="PauseAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xhK-Qd-dvO"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9dS-zj-fXo">
-                                                <rect key="frame" x="268" y="0.0" width="32" height="30"/>
+                                                <rect key="frame" x="298" y="0.0" width="54" height="30"/>
                                                 <state key="normal" title="Stop"/>
                                                 <connections>
                                                     <action selector="StopAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YJm-lc-mFT"/>
@@ -76,33 +76,89 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="Rj5-hH-E0c">
-                                        <rect key="frame" x="0.0" y="283.5" width="300" height="30"/>
+                                        <rect key="frame" x="0.0" y="285" width="352" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2EP-nc-JJy">
                                                 <rect key="frame" x="0.0" y="0.0" width="73" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="73" id="6sp-M0-cgh"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="v6Y-Hk-fO0">
-                                                <rect key="frame" x="98" y="0.0" width="204" height="31"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="200" id="qfP-ds-Hlp"/>
-                                                </constraints>
+                                                <rect key="frame" x="98" y="0.0" width="256" height="31"/>
                                                 <connections>
                                                     <action selector="ChangeVolume:" destination="BYZ-38-t0r" eventType="valueChanged" id="0LW-Uu-sZc"/>
                                                 </connections>
                                             </slider>
                                         </subviews>
                                     </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="W1A-fF-tJ8">
+                                        <rect key="frame" x="0.0" y="365" width="352" height="86.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0EJ-7C-PmY">
+                                                <rect key="frame" x="0.0" y="0.0" width="352" height="40.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3bh-FA-e6v">
+                                                        <rect key="frame" x="0.0" y="8.5" width="62.5" height="23.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <switch opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MP8-ut-bzX">
+                                                        <rect key="frame" x="303" y="5" width="51" height="30.5"/>
+                                                        <connections>
+                                                            <action selector="RecordMode:" destination="BYZ-38-t0r" eventType="valueChanged" id="AZj-lk-X4d"/>
+                                                        </connections>
+                                                    </switch>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="MP8-ut-bzX" firstAttribute="top" secondItem="0EJ-7C-PmY" secondAttribute="top" constant="5" id="WFs-Hu-g31"/>
+                                                    <constraint firstItem="3bh-FA-e6v" firstAttribute="top" secondItem="0EJ-7C-PmY" secondAttribute="top" constant="8.5" id="dfe-Vm-nxr"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Y3s-33-Ds6">
+                                                <rect key="frame" x="0.0" y="56.5" width="352" height="30"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hh8-q2-YTz">
+                                                        <rect key="frame" x="0.0" y="0.0" width="176" height="30"/>
+                                                        <state key="normal" title="Record"/>
+                                                        <connections>
+                                                            <action selector="RecordBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Axc-3k-7KH"/>
+                                                        </connections>
+                                                    </button>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dc8-hm-HTK">
+                                                        <rect key="frame" x="176" y="5" width="176" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="Dc8-hm-HTK" firstAttribute="baseline" secondItem="Hh8-q2-YTz" secondAttribute="firstBaseline" id="C3U-pm-54Z"/>
+                                                    <constraint firstItem="Hh8-q2-YTz" firstAttribute="baseline" secondItem="Dc8-hm-HTK" secondAttribute="firstBaseline" id="FBx-sC-bI8"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Y3s-33-Ds6" firstAttribute="top" secondItem="W1A-fF-tJ8" secondAttribute="top" constant="56.5" id="e78-Ko-mIt"/>
+                                        </constraints>
+                                    </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="W1A-fF-tJ8" firstAttribute="centerX" secondItem="qWP-GX-Cfr" secondAttribute="centerX" id="78Y-46-HHt"/>
+                                    <constraint firstItem="W1A-fF-tJ8" firstAttribute="centerX" secondItem="qWP-GX-Cfr" secondAttribute="centerX" id="U7v-vR-Y1Y"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="qWP-GX-Cfr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Nnd-m2-lcA"/>
-                            <constraint firstItem="qWP-GX-Cfr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="Sph-pP-JRF"/>
+                            <constraint firstItem="qWP-GX-Cfr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kz5-cz-UfA"/>
+                            <constraint firstItem="qWP-GX-Cfr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="OH8-KM-RL6"/>
+                            <constraint firstItem="qWP-GX-Cfr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QpK-QC-7Si"/>
                         </constraints>
                     </view>
                     <connections>
@@ -110,6 +166,8 @@
                         <outlet property="EndTime" destination="klu-wf-jMr" id="eQl-f0-sZj"/>
                         <outlet property="PauseBtn" destination="xBA-79-TwI" id="pLa-d7-rT4"/>
                         <outlet property="PlayBtn" destination="CLx-KP-9gf" id="8or-Ln-5Df"/>
+                        <outlet property="RecordBtn" destination="Hh8-q2-YTz" id="sUS-9c-XZJ"/>
+                        <outlet property="RecordTime" destination="Dc8-hm-HTK" id="vzO-FY-jwF"/>
                         <outlet property="StopBtn" destination="9dS-zj-fXo" id="yU9-0E-ylv"/>
                         <outlet property="Volume" destination="v6Y-Hk-fO0" id="kZH-WB-zU1"/>
                         <outlet property="progressPlay" destination="gBO-rf-MY2" id="t5g-Ad-7td"/>
