--- a/PinchGesture/PinchGesture/Base.lproj/Main.storyboard
+++ b/PinchGesture/PinchGesture/Base.lproj/Main.storyboard
@@ -16,24 +16,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pinch" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktg-II-jZI">
-                                <rect key="frame" x="16" y="44" width="382" height="818"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="iCU-i4-sW1">
+                                <rect key="frame" x="16" y="44" width="382" height="832"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ktg-II-jZI" secondAttribute="trailing" constant="16" id="EZ3-tU-Txb"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ktg-II-jZI" secondAttribute="bottom" id="ZPL-dY-aEA"/>
-                            <constraint firstItem="ktg-II-jZI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="eMW-Zi-zJZ"/>
-                            <constraint firstItem="ktg-II-jZI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="gix-Et-mfa"/>
+                            <constraint firstItem="iCU-i4-sW1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="1yB-9Y-7nT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iCU-i4-sW1" secondAttribute="trailing" constant="16" id="6oA-rd-BE7"/>
+                            <constraint firstAttribute="bottom" secondItem="iCU-i4-sW1" secondAttribute="bottom" constant="20" id="eqX-UT-15v"/>
+                            <constraint firstItem="iCU-i4-sW1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="lqV-Ee-Ydv"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="Pinch" destination="ktg-II-jZI" id="C7C-9T-vQI"/>
+                        <outlet property="imgPinch" destination="iCU-i4-sW1" id="TCM-Hh-yqD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -42,6 +39,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="test.jpg" width="732" height="701"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
